# computational-physics-project-bonn-2021

./: .gitignore  README.md  computational-physics-project-bonn-2021.code-workspace  final-project.ipynb  final_project.lyx  ising_common_procedures.py  subproject-general-visualizations.ipynb  subproject-mcmc-wolff-result-comparison.ipynb  subproject-mcmc-wolff-speed-comparison.ipynb  subproject-thermalization.ipynb  subproject-wolff-ergodicity-detailed-balance.ipynb  subproject-wolff-measure-critical-temperature.ipynb
final_project_native/: Cargo.toml
final_project_native/src/: lib.rs  mcmc_algorithms.rs  spinconfig.rs  wolff_algorithms.rs
simulation_data/: cluster_size_100.npy  cluster_size_120.npy  cluster_size_140.npy  cluster_size_160.npy  cluster_size_20.npy  cluster_size_40.npy  cluster_size_60.npy  cluster_size_80.npy  energy_autocorrelation_1_cluster_size.npz  energy_autocorrelation_1_energy_acorr.npz  energy_autocorrelation_2_cluster_size.npz  energy_autocorrelation_2_energy_acorr.npz  energy_autocorrelation_3_cluster_size.npz  energy_autocorrelation_3_energy_acorr.npz  energy_autocorrelation_4_cluster_size.npz  energy_autocorrelation_4_energy_acorr.npz  energy_autocorrelation_5_cluster_size.npz  energy_autocorrelation_5_energy_acorr.npz  energy_autocorrelation_6_cluster_size.npz  energy_autocorrelation_6_energy_acorr.npz
